src/styles.css
/* You can add global styles to this file, and also import other style files */
*{
    padding: 0;
    overflow: none;
    font-family: "Plus Jakarta Sans", sans-serif;
   box-sizing: border-box;
}

body{
   display: flex;
   align-items: center;
   justify-content: center;
   margin: auto;
  background:#E7F4FC;

}

